[package]
name = "rqa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
bytes = "1.2"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
netc = {git = "https://github.com/serbe/netc", version = "0.1"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = {version = "1", features = ["rt-multi-thread", "time"]}
url = "2.2"

[dev-dependencies]
dotenv = "0.15"
once_cell = "1.13"
tokio = {version = "1", features = ["full"]}
