[package]
name = "rqa"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
bytes = "1.9"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
netc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
url = "2"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
